--- a/index.html
+++ b/index.html
@@ -1,28 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <title>Frontend Mentor | QR code component</title>
+    <style>
+      body {
+        background-color: #d5e1ef;
+      }
+      h5 {
+        font-size: 18.5px;
+        font-weight: bolder;
+        color: #394863 !important;
+      }
+      p {
+        font-size: 13px;
+        line-height: 1.2;
+        margin-right: 10px;
+        margin-left: 10px;
+      }
+      .card {
+        margin: 0 auto;
+        border-radius: 22px;
+        border-color: #ffffff;
+      }
+      .card-body {
+        margin-bottom: 22px;
+      }
+      .card-body h5 {
+        margin-left: 9px;
+        margin-right: 9px;
+      }
+      .card-img-top {
+        border: 16px solid #ffffff;
+        border-radius: 26px;
+        margin-bottom: -17px;
+      }
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="card my-3" style="width: 18rem">
+      <img src="/images/image-qr-code.png" class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title text-center mt-1">
+          Improve your front-end skills by building projects
+        </h5>
+        <p class="card-text text-center text-muted mt-3">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
+    </div>
+    <div class="attribution mt-1">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Patricia Gracia</a>.
+    </div>
+  </body>
 </html>
