--- a/index.html
+++ b/index.html
@@ -15,18 +15,26 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mooli&family=Outfit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Frontend Mentor | QR code component</title>
     <style>
       body {
         background-color: #d5e1ef;
+        font-family: "Outfit", sans-serif;
       }
       h5 {
-        font-size: 18.5px;
-        font-weight: bolder;
+        font-size: 19px;
+        font-weight: 700;
         color: #394863 !important;
       }
       p {
-        font-size: 13px;
+        font-size: 15px;
+        font-weight: 400;
         line-height: 1.2;
         margin-right: 10px;
         margin-left: 10px;
@@ -59,7 +67,7 @@
   </head>
   <body>
     <div class="card my-3" style="width: 18rem">
-      <img src="/images/image-qr-code.png" class="card-img-top" alt="..." />
+      <img src="./images/image-qr-code.png" class="card-img-top" />
       <div class="card-body">
         <h5 class="card-title text-center mt-1">
           Improve your front-end skills by building projects
@@ -74,7 +82,8 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Patricia Gracia</a>.
+      >. Coded by
+      <a href="https://github.com/Patriciagracia">Patricia Gracia</a>.
     </div>
   </body>
 </html>
