--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       body {
         background-color: #d5e1ef;
         font-family: "Outfit", sans-serif;
+        margin: 0;
+        padding: 0;
+        width: 100vw;
+        min-height: 100vh;
       }
       h5 {
         font-size: 19px;
